2 files modified, 2 added, 3 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <p>
   Start editing to see some magic happen :)
 </p>
-<app-generate-teams-button></app-generate-teams-button>
+<member-list></member-list>
